objects/ACCObj123__c.object
<CustomObject>
    <description>dsdszxcxzxzcxzxzv</description>
    <fields>
        <fullName>Field4__c</fullName>
        <label>Field4</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pfield1__c</fullName>
        <label>Pfield1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PickListTest1__c</fullName>
        <description>Test Comment for this</description>
        <label>PickListTest1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PickListTest2__c</fullName>
        <description>Test2</description>
        <label>PickListTest2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFeled1__c</fullName>
        <label>SFeled1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>f2__c</fullName>
        <label>f2</label>
        <type>Phone</type>
    </fields>
    <label>ACCObj1234</label>
    <nameField>
        <label>ACCObj123 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AccObjs1234s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>